# VoxFront

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
embed/: GUIDE.md
embed/voice-dsp/: VoiceDSP.ts  VoiceSettingsButton.tsx  index.ts  useVoiceDSP.ts
public/worklet/: dsp-processor.js
rust-dsp/: Cargo.toml
rust-dsp/src/: aec.rs  agc.rs  dtmf.rs  effects.rs  fft.rs  lib.rs  ns.rs  vad.rs
scripts/: build-wasm.mjs
src/: main.ts  style.css
src/audio/: AudioEngine.ts
src/dsp/: config.ts
src/transport/: SipTransport.ts
voice-changer/: Cargo.toml  README.md  package.json  tsconfig.json
voice-changer/scripts/: build-wasm.mjs
voice-changer/src/: fx.rs  lib.rs  pitch.rs
voice-changer/ts/: engine.ts  index.ts  presets.ts  react.ts  types.ts  useVoiceChanger.ts
voice-changer/worklet/: voice-changer-processor.js
